# SpatialNN

./: pyproject.toml  totallyConnectedModel.ipynb
spatialNN/: Model.py
